<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/container_message"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/message_background_1"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/letter_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadeScrollbars="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="?actionBarSize"
        android:gravity="bottom|center"
        android:orientation="vertical"
        android:padding="@dimen/keyline_1">

        <TextView
            android:id="@+id/scroll_message"
            style="@style/TextAppearance.AppCompat.Small.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/keyline_1"
            android:text="@string/text_scroll"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/intro_connect_device"
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_connect_device"/>

        <ImageButton
            android:id="@+id/button_share_discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:contentDescription="@string/button_share"
            app:srcCompat="@drawable/ic_nearby"/>
    </LinearLayout>

</LinearLayout>